Revert "Merge pull request #2 from anindyadc/develop"
This reverts commit 4f36588535278f801bbd0fdfd4d8b91a37de0978, reversing
changes made to 5212a935de9522096375c2b466811a1e9bfa3d59.

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -5,6 +5,7 @@
     <title>{{ i18n "error_page_title" }}</title>
 
     {{ partial "head/favicons" . }}
+    {{ partial "head/others" . }}
   </head>
 
   <body>
