--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,6 +17,7 @@
     {{ partial "head/favicons" . }}
     {{ partial "head/rel-me" . }}
     {{ partial "head/microformats" . }}
+    {{ partial "head/others" . }}
     {{ partial "head/custom" . }}
   </head>
 
